--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/nav' %>
     <div class="container">
       <div class="row">
         <div class="col-12">
