--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,8 +6,8 @@
 }
 
 .group-nav-link {
-  border: 1px solid lighten($secondary, 40%);
-  background: lighten($secondary, 45%);
+  border: 1px solid lighten($primary, 40%);
+  background: lighten($primary, 45%);
 
   & + .group-nav-link {
     border-top: 0 none;
