Edit Group Show View

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -13,7 +13,7 @@
         <div class="chat-message-container">
           <div class="row no-gutters">
             <div class="col-auto text-center">
-              <img src="<%= room_message.user.gravatar_url %>" class="avatar" alt="">
+              <img src="<%= message.user.gravatar_url %>" class="avatar" alt="">
             </div>
 
             <div class="col">
