--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,12 +8,12 @@
   </div>
 
   <div class="col">
-    <div class="chat">
+    <div class="chat" data-channel-subscribe="group" data-group-id="<%= @group.id %>">
       <% @messages.each do |message| %>
         <div class="chat-message-container">
           <div class="row no-gutters">
             <div class="col-auto text-center">
-              <img src="<%= gravatar_url(message.user) %>" class="avatar" alt="">
+              <img src="<%= message.user.gravatar_url %>" class="avatar" alt="">
             </div>
 
             <div class="col">
@@ -49,5 +49,25 @@
 
       <%= form.input :group_id, as: :hidden %>
     <% end %>
+  </div>
+</div>
+
+<div class="d-none" data-role="message-template">
+  <div class="chat-message-container">
+    <div class="row no-gutters">
+      <div class="col-auto text-center">
+        <img src="" class="avatar" alt="" data-role="user-avatar">
+      </div>
+
+      <div class="col">
+        <div class="message-content">
+          <p class="mb-1" data-role="message-text"></p>
+
+          <div class="text-right">
+            <small data-role="message-date"></small>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
