--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -11,7 +11,9 @@
 
     <% if @groups.present? %>
       <nav class="nav flex-column">
-        <%= turbo_stream_from "groups" %>
+        <% @groups.each do |group| %>
+          <%= link_to group.name, group_path(group), class: "nav-link group-nav-link" %>
+        <% end %>
       </nav>
     <% else %>
       <div class="text-muted">
