--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,7 +3,7 @@
 </h1>
 
 <div class="row">
-  <div class="col-12 col-md-3">
+  <div class="col-12 col-md-3" id="groups">
     <%= render @group %>
   </div>
 
